--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "node server.js",
-    "client": "node client.js"
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
+    "migrate": "node src/db/migration/createSchema.js"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +13,15 @@
   "description": "",
   "type": "module",
   "devDependencies": {
+    "nodemon": "^3.1.4",
     "prettier": "^3.3.2"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "lodash": "^4.17.21",
+    "long": "^5.2.3",
+    "mysql2": "^3.10.1",
+    "protobufjs": "^7.3.2",
+    "uuid": "^10.0.0"
   }
 }
